can make predictions."

--- a/predict.ipynb
+++ b/predict.ipynb
@@ -9,11 +9,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "24/03/13 13:00:16 WARN Utils: Your hostname, Juliuss-MacBook-Pro-2.local resolves to a loopback address: 127.0.0.1; using 172.18.14.183 instead (on interface en0)\n",
-      "24/03/13 13:00:16 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
-      "Setting default log level to \"WARN\".\n",
-      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "24/03/13 13:00:17 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "/Users/julius/repos/BD-Project/.venv/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
    ],
@@ -21,8 +18,16 @@
     "from DataLoader import DataLoader\n",
     "from DataCleaner import DataCleaner\n",
     "from DataSplit import DataSplit, DataSet\n",
-    "val_data = DataLoader(DataSplit.VALIDATION).data\n",
-    "test_data = DataLoader(DataSplit.TEST).data"
+    "from pyspark.sql import SparkSession\n",
+    "from pyspark.ml import Pipeline as SparkPipeline\n",
+    "from pyspark.ml.feature import StringIndexer, VectorAssembler\n",
+    "from pyspark.ml.classification import RandomForestClassifier\n",
+    "from pyspark.ml.evaluation import BinaryClassificationEvaluator\n",
+    "from pyspark.ml import PipelineModel\n",
+    "from Pipeline import PipeLine\n",
+    "from pyspark.sql.functions import upper, initcap\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -31,87 +36,52 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "+---+----------+--------------+--------------------+----+-----------------+--------------------+--------------------+-----------+--------------+-------------------+\n",
-      "|   |product_id|product_parent|       product_title|vine|verified_purchase|     review_headline|         review_body|review_date|marketplace_id|product_category_id|\n",
-      "+---+----------+--------------+--------------------+----+-----------------+--------------------+--------------------+-----------+--------------+-------------------+\n",
-      "|  0|B00007M8K9|     792762056|Harry Potter à l'...|   N|                N|harry potter, sup...|On retrouve dans ...| 2003-01-14|             0|                  0|\n",
-      "| 32|B00EZCVFLM|     149870638|Loved Me Back to ...|   N|                Y|      Géschmácksáché|Wie gesagt ist Mu...| 2014-01-05|             0|                  6|\n",
-      "| 35|0857522310|     627793267|The Girl on the T...|   N|                Y|          Five Stars|Brought this for ...| 2015-07-10|             1|                  0|\n",
-      "| 48|B00AYZLCZ8|     108403123|The Next Day  (De...|   N|                Y|Vielleicht gibts ...|Als großer Bowie-...| 2013-04-05|             0|                  6|\n",
-      "| 61|B00IYOACQ6|     729049801|Can You Escape - ...|   N|                Y|Can you excape-Tower|Its not my sort o...| 2014-06-01|             1|                  1|\n",
-      "| 62|B00B1SKERO|      77682141|Le Hobbit : Un vo...|   N|                N|                 Nul|Comme il a été di...| 2013-03-17|             2|                  3|\n",
-      "| 73|B00NCKVJEG|     342866536|Moshi - SenseCove...|   N|                Y|           bien mais|delai de livraiso...| 2015-02-15|             2|                 13|\n",
-      "|102|B000V2SH1Q|     683164597|High School Music...|   N|                Y|          dié zwéité|highschớớl músicá...| 2007-10-22|             0|                  3|\n",
-      "|106|B002RHGYOA|     382448153|The Girl Who Play...|   N|                Y|            Gripping|Absolutely grippi...| 2015-01-17|             1|                 10|\n",
-      "|122|B007L3BMGA|     600633062|Fifty Shades of G...|   N|                Y|Brilliant despera...|I bought this boo...| 2012-07-07|             1|                  4|\n",
-      "|124|B00004Y6NM|       6094739|      Behind the Sun|   N|                N|   Verkanntes Album?|Eric Clapton hat ...| 2015-07-23|             0|                  6|\n",
-      "|131|B006DGOV9Q|     331972693|Günstig und einwa...|   N|                Y|Samsung EBF1A2GBU...|Ich war skeptisch...| 2013-05-02|             3|                 17|\n",
-      "|140|B0028K3192|     653122578|  BLACKSummer'snight|   N|                N|   A WELCOME RETURN!|Eight years on an...| 2009-11-06|             1|                  6|\n",
-      "|141|2253150711|     708473678|Stupeur et Trembl...|   N|                N|Bon boulot Amélie!!!|Au point de vue t...| 2001-11-03|             2|                 15|\n",
-      "|142|B003HC8I5M|     458754151|          Going Back|   N|                N|Un album de repri...|Contrairement au ...| 2010-09-14|             0|                  6|\n",
-      "|148|0316247545|     695363788|My Little Pony: T...|   N|                Y|A la fois objet d...|Sceptique au débu...| 2013-06-09|             2|                  0|\n",
-      "|154|B003XTWCQK|     593358394|The Traveling Wil...|   N|                N|Musikhistorischer...|Mit dem Video auf...| 2013-09-07|             0|                 12|\n",
-      "|156|B007FG9LIE|     788088554|Pines (The Waywar...|   N|                Y|Absolutely fantastic|This book really ...| 2014-04-09|             1|                  4|\n",
-      "|159|B005WGIJPA|     669695471|LEGO Super Heroes...|   N|                Y|          Five Stars|excellent fast de...| 2015-02-23|             1|                  2|\n",
-      "|163|075533146X|     503057596| Pride and Prejudice|   N|                N|My favorite class...|This book has age...| 2007-03-13|             1|                  0|\n",
-      "+---+----------+--------------+--------------------+----+-----------------+--------------------+--------------------+-----------+--------------+-------------------+\n",
-      "only showing top 20 rows\n",
-      "\n"
+      "24/03/13 15:38:54 WARN Utils: Your hostname, Juliuss-MacBook-Pro-2.local resolves to a loopback address: 127.0.0.1; using 172.18.14.183 instead (on interface en0)\n",
+      "24/03/13 15:38:54 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
+      "24/03/13 15:38:54 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "24/03/13 15:38:54 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n"
      ]
     }
    ],
    "source": [
-    "val_data.df.show()"
+    "\n",
+    "val_data = DataLoader(DataSplit.VALIDATION).data\n",
+    "test_data = DataLoader(DataSplit.TEST).data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "val_pipeline = PipeLine(DataSplit.VALIDATION)\n",
+    "test_pipeline = PipeLine(DataSplit.TEST)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:root:The submission files for validation and test data should contain predictions only. Consider setting predictions_only to True.\n",
+      "WARNING:root:The submission files for validation and test data should contain predictions only. Consider setting predictions_only to True.\n"
+     ]
+    }
+   ],
    "source": [
-    "cleaned_val_data = DataCleaner(val_data).data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "val_df.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pyspark.sql.functions import lit\n",
-    "\n",
-    "# tried every fucking possible data type for true and false, \n",
-    "# but when submitting predictions, the website always complains that\n",
-    "# \"predictions can only be 'True' or 'False\"...\"\n",
-    "val_df = val_df.withColumn(\"label\", lit(\"True\").cast(\"string\"))\n",
-    "# set datatype to string\n",
-    "\n",
-    "test_df = test_df.withColumn(\"label\", lit(\"False\").cast(\"string\"))\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# check if all avlues of label column are 'true'\n",
-    "val_df.groupBy(\"label\").count().show()\n",
-    "test_df.groupBy(\"label\").count().show()"
+    "val_df = val_pipeline.run()\n",
+    "test_df = test_pipeline.run()"
    ]
   },
   {
@@ -123,11 +93,152 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = PipelineModel.load(\"model\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "24/03/13 15:39:00 WARN StringIndexerModel: Input column label does not exist during transformation. Skip StringIndexerModel for this column.\n",
+      "24/03/13 15:39:00 WARN StringIndexerModel: Input column label does not exist during transformation. Skip StringIndexerModel for this column.\n"
+     ]
+    }
+   ],
+   "source": [
+    "val_preds = model.transform(val_df)\n",
+    "test_preds = model.transform(test_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+\n",
+      "|prediction|\n",
+      "+----------+\n",
+      "|       1.0|\n",
+      "|       0.0|\n",
+      "|       0.0|\n",
+      "|       1.0|\n",
+      "|       0.0|\n",
+      "+----------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "val_preds.select(\"prediction\").show(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# add label column, convering from 0,1 to False, True\n",
+    "val_preds = val_preds.withColumn(\"label\", val_preds[\"prediction\"].cast(\"boolean\").cast(\"string\"))\n",
+    "test_preds = test_preds.withColumn(\"label\", test_preds[\"prediction\"].cast(\"boolean\").cast(\"string\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "val_preds = val_preds.select(initcap(\"label\"))\n",
+    "test_preds = test_preds.select(initcap(\"label\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------+\n",
+      "|initcap(label)|\n",
+      "+--------------+\n",
+      "|          True|\n",
+      "|         False|\n",
+      "|         False|\n",
+      "|          True|\n",
+      "|         False|\n",
+      "+--------------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "val_preds.show(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "val_df = val_df.select(\"label\")\n",
+    "# from pyspark.sql.functions import lit\n",
+    "\n",
+    "# # tried every fucking possible data type for true and false, \n",
+    "# # but when submitting predictions, the website always complains that\n",
+    "# # \"predictions can only be 'True' or 'False\"...\"\n",
+    "# val_df = val_df.withColumn(\"label\", lit(\"True\").cast(\"string\"))\n",
+    "# # set datatype to string\n",
+    "\n",
+    "# test_df = test_df.withColumn(\"label\", lit(\"False\").cast(\"string\"))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# check if all avlues of label column are 'true'\n",
+    "val_preds.groupBy(\"label\").count().show()\n",
+    "# test_df.groupBy(\"label\").count().show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "val_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "val_df = val_.select(\"label\")\n",
     "test_df = test_df.select(\"label\")"
    ]
   },
@@ -147,8 +258,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "val_df.write.csv(f'predictions/validation.csv', mode=\"overwrite\", header=False)\n",
-    "test_df.write.csv(f'predictions/test.csv', mode=\"overwrite\", header=False)\n",
+    "val_preds.write.csv(f'predictions/validation.csv', mode=\"overwrite\", header=False)\n",
+    "test_preds.write.csv(f'predictions/test.csv', mode=\"overwrite\", header=False)\n",
     "                  "
    ]
   },
