refactor: use config  instead of hardcoded ones.

--- a/predict.ipynb
+++ b/predict.ipynb
@@ -24,10 +24,9 @@
     "from pyspark.ml.classification import RandomForestClassifier\n",
     "from pyspark.ml.evaluation import BinaryClassificationEvaluator\n",
     "from pyspark.ml import PipelineModel\n",
-    "from Pipeline import PipeLine\n",
+    "from Pipeline import PreProcessingPipeline\n",
     "from pyspark.sql.functions import upper, initcap\n",
-    "\n",
-    "\n"
+    "from Config import Config"
    ]
   },
   {
@@ -39,12 +38,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "24/03/13 15:38:54 WARN Utils: Your hostname, Juliuss-MacBook-Pro-2.local resolves to a loopback address: 127.0.0.1; using 172.18.14.183 instead (on interface en0)\n",
-      "24/03/13 15:38:54 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "24/03/13 15:38:54 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
-      "24/03/13 15:38:54 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n"
+      "24/03/14 10:27:29 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     }
    ],
@@ -60,8 +56,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "val_pipeline = PipeLine(DataSplit.VALIDATION)\n",
-    "test_pipeline = PipeLine(DataSplit.TEST)\n",
+    "val_preprocessing_pipeline = PreProcessingPipeline(DataSplit.VALIDATION)\n",
+    "test_preprocessing_pipeline = PreProcessingPipeline(DataSplit.TEST)\n",
     "\n"
    ]
   },
@@ -80,24 +76,25 @@
     }
    ],
    "source": [
-    "val_df = val_pipeline.run()\n",
-    "test_df = test_pipeline.run()"
+    "val_df = val_preprocessing_pipeline.run()\n",
+    "test_df = test_preprocessing_pipeline.run()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
    "source": [
-    "model = PipelineModel.load(\"model\")"
+    "model = PipelineModel.load(Config.MODEL_PATH)"
    ]
   },
   {
@@ -109,8 +106,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "24/03/13 15:39:00 WARN StringIndexerModel: Input column label does not exist during transformation. Skip StringIndexerModel for this column.\n",
-      "24/03/13 15:39:00 WARN StringIndexerModel: Input column label does not exist during transformation. Skip StringIndexerModel for this column.\n"
+      "24/03/14 10:27:35 WARN StringIndexerModel: Input column label does not exist during transformation. Skip StringIndexerModel for this column.\n",
+      "24/03/14 10:27:35 WARN StringIndexerModel: Input column label does not exist during transformation. Skip StringIndexerModel for this column.\n"
      ]
     }
    ],
@@ -131,7 +128,7 @@
       "+----------+\n",
       "|prediction|\n",
       "+----------+\n",
-      "|       1.0|\n",
+      "|       0.0|\n",
       "|       0.0|\n",
       "|       0.0|\n",
       "|       1.0|\n",
@@ -169,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +176,7 @@
       "+--------------+\n",
       "|initcap(label)|\n",
       "+--------------+\n",
-      "|          True|\n",
+      "|         False|\n",
       "|         False|\n",
       "|         False|\n",
       "|          True|\n",
@@ -196,90 +193,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from pyspark.sql.functions import lit\n",
-    "\n",
-    "# # tried every fucking possible data type for true and false, \n",
-    "# # but when submitting predictions, the website always complains that\n",
-    "# # \"predictions can only be 'True' or 'False\"...\"\n",
-    "# val_df = val_df.withColumn(\"label\", lit(\"True\").cast(\"string\"))\n",
-    "# # set datatype to string\n",
-    "\n",
-    "# test_df = test_df.withColumn(\"label\", lit(\"False\").cast(\"string\"))\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# check if all avlues of label column are 'true'\n",
-    "val_preds.groupBy(\"label\").count().show()\n",
-    "# test_df.groupBy(\"label\").count().show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "val_"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "val_df = val_.select(\"label\")\n",
-    "test_df = test_df.select(\"label\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# val_df.show()\n",
-    "# val_df.index"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "val_preds.write.csv(f'predictions/validation.csv', mode=\"overwrite\", header=False)\n",
-    "test_preds.write.csv(f'predictions/test.csv', mode=\"overwrite\", header=False)\n",
+    "val_preds.write.csv(f'{Config.PREDICTIONS_PATH}{Config.VALIDATION_PREDICTIONS_NAME}', mode=\"overwrite\", header=False)\n",
+    "test_preds.write.csv(f'{Config.PREDICTIONS_PATH}{Config.TEST_PREDICTIONS_NAME}', mode=\"overwrite\", header=False)\n",
     "                  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# export to .csv\n",
-    "# df.write.csv(\"predictions/validation.csv\", header=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# add column label\n"
    ]
   },
   {
