can use train.py.

--- a/deprecated/predict.ipynb
+++ b/deprecated/predict.ipynb
@@ -15,8 +15,8 @@
     }
    ],
    "source": [
-    "from DataLoader import DataLoader\n",
-    "from DataCleaner import DataCleaner\n",
+    "from deprecated.DataLoader import DataLoader\n",
+    "from deprecated.DataCleaner import DataCleaner\n",
     "from DataSplit import DataSplit, DataSet\n",
     "from pyspark.sql import SparkSession\n",
     "from pyspark.ml import Pipeline as SparkPipeline\n",
@@ -40,7 +40,7 @@
      "text": [
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "24/03/14 10:27:29 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "24/03/14 10:29:09 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     }
    ],
@@ -106,8 +106,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "24/03/14 10:27:35 WARN StringIndexerModel: Input column label does not exist during transformation. Skip StringIndexerModel for this column.\n",
-      "24/03/14 10:27:35 WARN StringIndexerModel: Input column label does not exist during transformation. Skip StringIndexerModel for this column.\n"
+      "24/03/14 10:29:14 WARN StringIndexerModel: Input column label does not exist during transformation. Skip StringIndexerModel for this column.\n",
+      "24/03/14 10:29:15 WARN StringIndexerModel: Input column label does not exist during transformation. Skip StringIndexerModel for this column.\n"
      ]
     }
    ],
@@ -201,34 +201,6 @@
     "test_preds.write.csv(f'{Config.PREDICTIONS_PATH}{Config.TEST_PREDICTIONS_NAME}', mode=\"overwrite\", header=False)\n",
     "                  "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
