--- a/predict.ipynb
+++ b/predict.ipynb
@@ -9,8 +9,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/julius/repos/BD-Project/.venv/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
+      "/home/roderickmajoor/anaconda3/envs/BD/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "None of PyTorch, TensorFlow >= 2.0, or Flax have been found. Models won't be available and only tokenizers, configuration and file/data utilities can be used.\n"
      ]
     }
    ],
@@ -38,9 +39,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "24/03/14 16:39:25 WARN Utils: Your hostname, roderick resolves to a loopback address: 127.0.1.1; using 192.168.178.29 instead (on interface enp3s0)\n",
+      "24/03/14 16:39:25 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "24/03/14 10:27:29 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "24/03/14 16:39:26 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "24/03/14 16:39:26 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n"
      ]
     }
    ],
@@ -89,7 +93,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                                                \r"
+      "WARNING: An illegal reflective access operation has occurred                    \n",
+      "WARNING: Illegal reflective access by org.apache.spark.util.SizeEstimator$ (file:/home/roderickmajoor/anaconda3/envs/BD/lib/python3.12/site-packages/pyspark/jars/spark-core_2.12-3.5.1.jar) to field java.math.BigInteger.mag\n",
+      "WARNING: Please consider reporting this to the maintainers of org.apache.spark.util.SizeEstimator$\n",
+      "WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations\n",
+      "WARNING: All illegal access operations will be denied in a future release\n"
      ]
     }
    ],
@@ -106,8 +114,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "24/03/14 10:27:35 WARN StringIndexerModel: Input column label does not exist during transformation. Skip StringIndexerModel for this column.\n",
-      "24/03/14 10:27:35 WARN StringIndexerModel: Input column label does not exist during transformation. Skip StringIndexerModel for this column.\n"
+      "24/03/14 16:39:39 WARN StringIndexerModel: Input column label does not exist during transformation. Skip StringIndexerModel for this column.\n",
+      "24/03/14 16:39:40 WARN StringIndexerModel: Input column label does not exist during transformation. Skip StringIndexerModel for this column.\n"
      ]
     }
    ],
@@ -122,13 +130,21 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "[Stage 17:>                                                         (0 + 1) / 1]\r"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "+----------+\n",
       "|prediction|\n",
       "+----------+\n",
-      "|       0.0|\n",
+      "|       1.0|\n",
       "|       0.0|\n",
       "|       0.0|\n",
       "|       1.0|\n",
@@ -136,6 +152,14 @@
       "+----------+\n",
       "only showing top 5 rows\n",
       "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "                                                                                \r"
      ]
     }
    ],
@@ -176,7 +200,7 @@
       "+--------------+\n",
       "|initcap(label)|\n",
       "+--------------+\n",
-      "|         False|\n",
+      "|          True|\n",
       "|         False|\n",
       "|         False|\n",
       "|          True|\n",
@@ -233,9 +257,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "BD",
    "language": "python",
-   "name": "python3"
+   "name": "bd"
   },
   "language_info": {
    "codemirror_mode": {
@@ -251,5 +275,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
