--- a/deprecated/predict.ipynb
+++ b/deprecated/predict.ipynb
@@ -24,7 +24,7 @@
     "from pyspark.ml.classification import RandomForestClassifier\n",
     "from pyspark.ml.evaluation import BinaryClassificationEvaluator\n",
     "from pyspark.ml import PipelineModel\n",
-    "from Pipeline import PreProcessingPipeline\n",
+    "from deprecated.Pipeline import PreProcessingPipeline\n",
     "from pyspark.sql.functions import upper, initcap\n",
     "from Config import Config"
    ]
