--- a/deprecated/train.ipynb
+++ b/deprecated/train.ipynb
@@ -15,7 +15,7 @@
     }
    ],
    "source": [
-    "from Pipeline import PreProcessingPipeline\n",
+    "from deprecated.Pipeline import PreProcessingPipeline\n",
     "from DataSplit import DataSplit\n",
     "\n",
     "from pyspark.sql import SparkSession\n",
